Scrollbar and n64 color fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,8 +61,8 @@ body {
   width: 400vw;
 }
 .three {
-  background: #014282;
-  color: white;
+  background: #206636;
+  color: black;
   background-size: auto 100vh;
   background-repeat: repeat-x;
   width: 400vw;
@@ -102,13 +102,15 @@ body {
   position: absolute;
 }
 .outer-wrapper::-webkit-scrollbar {
-  width: 2vh;
+  width: 25px;
 }
-
 .outer-wrapper::-webkit-scrollbar-thumb {
-  background: red;
+  background: url(../images/nintendoLogos/197520px.png);
+  background-color:#00c3e3;
+  border-radius:10px;
+  background-repeat: no-repeat;
+  background-position: center; 
   width: 10px;
-  border-radius: 10px;
 }
 #music{
   background:#e4000f;
